--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@types/react-datepicker": "4.4.2",
     "react": "^18.2.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
