--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/react-datepicker": "4.4.2",
+    "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-datepicker": "4.8.0",
     "react-dom": "^18.2.0"
